--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "React Dashboard",
   "main": "index.js",
   "directories": {
-    "doc": "docs",
     "test": "test"
   },
   "scripts": {
@@ -12,8 +11,7 @@
     "build": "babel ./src --out-dir ./lib",
     "prepublish": "npm run build",
     "test:browser:watch": "npm run test:browser:base -- --auto-watch",
-    "test:browser:base": "karma start test/karma.conf.js",
-    "start": "node server.js"
+    "test:browser:base": "karma start test/karma.conf.js"
   },
   "files": [
     "lib",
@@ -39,7 +37,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-1": "^6.3.13",
+    "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.3.19",
     "enzyme": "^2.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
